# nvim

./: .gitignore  init.lua  init.txt
lua/: auto_complete.lua  gitlab_commands.lua  lsp_config.lua  tree_sitter.lua
lua/yui/: chat.lua  config.lua  db.lua  utils.lua  yui.db
lua/yui/python/: pyproject.toml
lua/yui/python/yui_python/: main.py
